--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,5 @@
 /var/
 /vendor/
 .idea
-electricity-api.iml
+/electricity-api.iml
 symfony.lock
-###< symfony/framework-bundle ###
-
-###> friends-of-behat/symfony-extension ###
-/behat.yml
-###< friends-of-behat/symfony-extension ###
