feature: add unit test

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 .idea
 /electricity-api.iml
 symfony.lock
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
