--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
+    "require-dev": {
+        "mockery/mockery": "^1.5",
+        "phpunit/phpunit": "^9.5",
+        "symfony/phpunit-bridge": "^6.0"
+    },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
